--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,13 @@
 language: python
+sudo: false
 python:
-    - "3.6"
-    
+    - "3.5"
+
 install:
-    #------------------
-    # Base requirements
-    #------------------
-    - sudo apt-get update
-    - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
-    - bash miniconda.sh -b -p $HOME/miniconda
-    - export PATH="$HOME/miniconda/bin:$PATH"
-    - conda config --set always_yes yes --set changeps1 no
-    - conda update -q conda
-    - conda info -a
+    # Install shakemap and requirements
     - bash install.sh
+    - export PATH="$HOME/miniconda/bin:$PATH"
     - source activate amptools
-    #---------------------
-    # Install amptools
-    #---------------------
-    - python setup.py install
 before_script:
     # This is to take care of Invalid DISPLAY variable
     - "export DISPLAY=:99.0"
@@ -26,8 +15,8 @@ before_script:
     - sleep 3 # give xvfb some time to start
 script:
     - export PYTHONPATH="."
-    - echo `which py.test`
-    - py.test --cov=amptools
+    - py.test --cov=.
+    - echo `sphinx-build --version`
 after_success:
     - pip install codecov codacy-coverage
     - codecov
