--- a/environment_osx.yml
+++ b/environment_osx.yml
@@ -6,25 +6,31 @@ channels:
 - ioos
 dependencies:
 - appnope=0.1.0
+- asn1crypto=0.22.0
 - attrs=17.4.0
 - backports=1.0
-- backports.functools_lru_cache=1.4
+- backports.functools_lru_cache=1.5
 - blas=1.1
 - bleach=2.0.0
-- ca-certificates=2017.11.5
-- certifi=2017.11.5
-- coverage=4.4.2
+- ca-certificates=2018.1.18
+- certifi=2018.1.18
+- cffi=1.11.2
+- chardet=3.0.4
+- coverage=4.5.1
+- cryptography=2.1.4
 - cycler=0.10.0
 - decorator=4.1.2
 - entrypoints=0.2.3
 - et_xmlfile=1.0.1
 - freetype=2.8.1
+- future=0.16.0
 - html5lib=1.0.1
 - icu=58.2
-- ipykernel=4.8.0
+- idna=2.6
+- ipykernel=4.8.2
 - ipython=6.2.1
 - ipython_genutils=0.2.0
-- ipywidgets=7.1.1
+- ipywidgets=7.1.2
 - jdcal=1.3
 - jedi=0.11.1
 - jinja2=2.10
@@ -34,6 +40,7 @@ dependencies:
 - jupyter_client=5.2.2
 - jupyter_console=5.2.0
 - jupyter_core=4.4.0
+- libffi=3.2.1
 - libgfortran=3.0.0
 - libiconv=1.15
 - libpng=1.6.34
@@ -48,7 +55,8 @@ dependencies:
 - nbformat=4.4.0
 - ncurses=5.9
 - notebook=5.4.0
-- numpy=1.14.0
+- numpy=1.14.1
+- obspy=1.1.0
 - openblas=0.2.20
 - openpyxl=2.5.0
 - openssl=1.0.2n
@@ -56,51 +64,60 @@ dependencies:
 - pandoc=2.1.1
 - pandocfilters=1.4.1
 - parso=0.1.1
-- pexpect=4.3.1
+- pexpect=4.4.0
 - pickleshare=0.7.4
 - pip=9.0.1
 - pluggy=0.6.0
 - prompt_toolkit=1.0.15
 - ptyprocess=0.5.2
 - py=1.5.2
+- pycparser=2.18
 - pygments=2.2.0
+- pyopenssl=17.4.0
 - pyparsing=2.2.0
 - pyqt=5.6.0
-- pytest=3.4.0
+- pysocks=1.6.8
+- pytest=3.4.1
 - pytest-cov=2.5.1
-- python=3.5.4
+- python=3.5.5
 - python-dateutil=2.6.1
-- pytz=2017.3
-- pyzmq=16.0.2
+- pytz=2018.3
+- pyzmq=17.0.0
 - qt=5.6.2
 - qtconsole=4.3.1
 - readline=7.0
-- send2trash=1.4.2
-- setuptools=38.4.0
+- requests=2.18.4
+- scipy=1.0.0
+- send2trash=1.5.0
+- setuptools=38.5.1
 - simplegeneric=0.8.1
 - sip=4.18
 - six=1.11.0
+- sqlalchemy=1.2.1
 - sqlite=3.20.1
 - terminado=0.8.1
 - testpath=0.3.1
 - tk=8.6.7
 - tornado=4.5.3
 - traitlets=4.3.2
+- urllib3=1.22
 - wcwidth=0.1.7
 - webencodings=0.5
 - wheel=0.30.0
-- widgetsnbextension=3.1.3
+- widgetsnbextension=3.1.4
 - xlrd=1.1.0
 - xlsxwriter=1.0.2
 - xlwt=1.3.0
 - xz=5.2.3
-- zeromq=4.2.1
+- zeromq=4.2.3
 - zlib=1.2.11
 - pip:
-  - backports.functools-lru-cache==1.4
+  - backports.functools-lru-cache==1.5
   - et-xmlfile==1.0.1
   - ipython-genutils==0.2.0
   - jupyter-client==5.2.2
   - jupyter-console==5.2.0
   - jupyter-core==4.4.0
   - prompt-toolkit==1.0.15
+
+
