--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 install:
     # Install shakemap and requirements
     - bash install.sh
-    - export PATH="$HOME/miniconda/bin:$PATH"
+    - . $HOME/miniconda/etc/profile.d/conda.sh
     - source activate amptools
 before_script:
     # This is to take care of Invalid DISPLAY variable
