--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ install:
     - bash install.sh
     - . $HOME/miniconda/etc/profile.d/conda.sh
     - conda activate amptools
+    - gmsetup
     - which gcc
 before_script:
     # This is to take care of Invalid DISPLAY variable
