--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,11 @@ install:
     - . $HOME/miniconda/etc/profile.d/conda.sh
     - conda activate amptools
     - which gcc
+services:
+    - xvfb
 before_script:
     # This is to take care of Invalid DISPLAY variable
     - "export DISPLAY=:99.0"
-    - "sh -e /etc/init.d/xvfb start"
     - sleep 3 # give xvfb some time to start
 script:
     - export PYTHONPATH="."
